# weather-rag-app

./: README.md  app.py  main.py  pyproject.toml  weather.csv
components/: data_loader.py  llm.py
services/: pipeline.py
vector_db/chroma_db/: chroma.sqlite3
vector_db/chroma_db/d7373722-ac2e-452f-9b7e-bfd1da72a611/: index_metadata.pickle
