[project]
name = "weather-rag-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.1.0",
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-core>=0.3.77",
    "langchain-ollama>=0.3.9",
    "streamlit>=1.50.0",
]
